--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap");
+* {
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  text-transform: capitalize;
+  transition: all 0.2s linear;
+}
+
 /* ======= Header Section/Seção do cabeçalho ======== */
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 991px) {
