--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,27 @@
   transition: all 0.2s linear;
 }
 
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  scroll-padding-top: 8rem;
+  overflow-x: hidden;
+}
+html::-webkit-scrollbar {
+  width: 1rem;
+}
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+  background: #eacf4f;
+  border-radius: 5rem;
+}
+
+body {
+  background: url(../img/background.jpg);
+}
+
 /* ======= Header Section/Seção do cabeçalho ======== */
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 991px) {
