--- a/css/style.scss
+++ b/css/style.scss
@@ -62,27 +62,38 @@ html {
 
 body {
     background: url(../img/background.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    overflow-x: hidden;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ======= Header Section/Seção do cabeçalho ======== */
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: $black;
+    padding: 3rem 9%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
 
+    .icons {
+        font-size: 2.5rem;
+        cursor: pointer;
+        color: $white;
+
+        &:hover {
+            color: $yellow;
+        }
+    }
+
+}
 
 
 
