--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,19 @@ body {
 .header .icons:hover {
   color: #eacf4f;
 }
+.header #menu-btn {
+  display: none;
+}
+.header .navbar a {
+  color: #fff;
+  font-size: 2rem;
+  margin: 0 2rem;
+}
+.header .navbar a:hover {
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  color: #eacf4f;
+}
 
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 991px) {
