--- a/css/style.scss
+++ b/css/style.scss
@@ -151,9 +151,11 @@ body {
             text-transform: none;
             font-size: 1.6rem;
             color: $white;
-        }
+        }        
+    }
 
-        
+    .fa-times {
+        transform: rotate(180deg);
     }
 }
 
