Update menu btn

--- a/css/style.scss
+++ b/css/style.scss
@@ -218,7 +218,9 @@ body {
  
        .navbar{
           position: absolute;
-          top:99%; left:0; right:0;
+          top:99%; 
+          left:0; 
+          right:0;
           background: $black;
           clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
  
