--- a/css/style.scss
+++ b/css/style.scss
@@ -68,6 +68,11 @@ body {
 }
 
 
+section {
+    padding: 3rem 9%;
+}
+
+
 
 /* ======= Header Section/Seção do cabeçalho ======== */
 .header {
@@ -161,7 +166,7 @@ body {
 
 
 
-
+/* ======= Home Section/Seção de inicio ======== */
 
 
 
