--- a/css/style.scss
+++ b/css/style.scss
@@ -72,6 +72,16 @@ section {
     padding: 3rem 9%;
 }
 
+.heading {
+    text-align: center;
+    margin-bottom: 3rem;
+
+    h3 {
+        @include title-text(3rem);
+        margin-top: 1rem;
+    }
+}
+
 .btn {
     display: inline-block;
     margin-top: 1rem;
@@ -242,7 +252,7 @@ section {
 
 
 
-
+/* ======= Menu Section/Seção de Cardápio ======== */
 
 
 
