--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,33 @@ section {
 }
 
 /* ======= Menu Section/Seção de Cardápio ======== */
+.menu .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+  gap: 2rem;
+}
+.menu .box-container .box {
+  text-align: center;
+}
+.menu .box-container .box img {
+  height: 25rem;
+}
+.menu .box-container .box .content {
+  padding: 1rem 0;
+}
+.menu .box-container .box .content .stars {
+  margin-bottom: 1rem;
+}
+.menu .box-container .box .content .stars i {
+  font-size: 1.7rem;
+  color: #eacf4f;
+}
+.menu .box-container .box .content h3 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 1200px) {
   .header {
