--- a/css/style.scss
+++ b/css/style.scss
@@ -294,7 +294,38 @@ section {
 }
 
 
+/* ======= About Section/Seção Sobre Nós ======== */
+.about {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
 
+    .image {
+        flex: 1 1 40rem;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .content {
+        flex: 1 1 40rem;
+
+        .title {
+            @include title-text(2.5rem);
+        }
+
+        p {
+            @include grap-text(1.5rem);
+            padding: 2rem 0;
+        }
+
+        .icons {
+            
+        }
+    }
+}
 
 
 
