--- a/css/style.scss
+++ b/css/style.scss
@@ -343,7 +343,43 @@ section {
 
 
 
+/* ======= Reviews Section/Seção de Comentários ======== */
+.reviews {
 
+
+    .box-container {
+        @include grid(31rem);
+
+        .box {
+            text-align: center;
+            padding: 2rem;
+
+            img {
+                height: 10rem;
+                width: 10rem;
+                border-radius: 50%;
+                margin-bottom: 1rem;
+            }
+
+            h3 {
+                @include title-text(2rem);
+            }
+
+            p {
+                @include grap-text(1.5rem);
+                padding: 1rem 0;
+            }
+
+            .stars {
+
+                i {
+                    font-size: 1.7rem;
+                    color: $yellow;
+                }
+            }
+        }
+    }
+}
 
 
 
