--- a/css/style.scss
+++ b/css/style.scss
@@ -384,7 +384,72 @@ section {
 
 
 /* ======= Contatcs Section/Seção de Contatos ======== */
+.contact {
 
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3rem;
+
+        .map {
+            flex: 1 1 40rem;
+        }
+
+        .form {
+            flex: 1 1 40rem;
+
+            .icons-container {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 2rem;
+                margin-bottom: 3rem;
+
+                .icons {
+                    flex: 1 1 17rem;
+                    text-align: center;
+
+                    i {
+                        height: 6rem;
+                        width: 6rem;
+                        line-height: 6rem;
+                        border-radius: 50%;
+                        background: $yellow;
+                        color: $black;
+                        font-size: 2rem;
+                        margin-bottom: 1rem;
+                    }
+
+                    h3 {
+                        padding: 1rem 0;
+                        @include title-text(2rem);
+                    }
+
+                    p {
+                        @include grap-text(1.5rem);
+                    }
+                }
+            }
+
+            form {
+                text-align: center;
+
+                .box {
+                    padding: 1.2rem 1.4rem;
+                    font-size: 1.6rem;
+                    color: $white;
+                    background: none;
+                    border: $border;
+                    text-transform: none;
+                    width: 100%;
+
+                    &:focus {
+                        border-color: $yellow;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
