--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ section {
   resize: none;
 }
 
+/* ======= Blogs Section/Seção de Blogs ======== */
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 1200px) {
   .header {
