Update project Ok

--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,24 @@ section {
   resize: none;
 }
 
+/* ======= Footer Section/Seção de Rodapé ======== */
+.footer {
+  text-align: center;
+  background: linear-gradient(transparent, #000);
+}
+.footer .links a {
+  margin: 1rem;
+}
+.footer .credit {
+  font-size: 2rem;
+  line-height: 2;
+  color: #aaa;
+  padding-top: 2rem;
+}
+.footer .credit span {
+  color: #eacf4f;
+}
+
 /* ======= Responsive/Responsividade ======= */
 @media (max-width: 1200px) {
   .header {
